Fix overflow issues

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@ body{
     margin: 0;
     padding: 0;
     height: 100%;
-    
     font-family: 'Press Start 2P', cursive;
     background: repeating-linear-gradient(0deg, #0f0a1e, #0f0a1e 2px, #222 2px, #222 4px);
 }
@@ -13,6 +12,7 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
+    overflow: hidden;
 }
 
 canvas {
